--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: '0 2 * * 1'        # Lundi à 2h du matin
+    - cron: '0 2 * * 1'
   workflow_dispatch:
 
 permissions:
@@ -18,20 +18,12 @@ jobs:
     name: Mise à jour automatique du backend
     runs-on: ubuntu-latest
     steps:
-      - name: Récupérer le code
-        uses: actions/checkout@v4
-
-      - name: Configurer Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Construire l’image Docker backend
-        run: docker build -t local-backend:latest ./backend
-
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - run: docker build -t local-backend:latest ./backend
       - name: Message de succès
         if: success()
-        run: |
-          echo "✅ Build réussi : les mises à jour du backend se sont bien passées !"
-
+        run: echo "✅ Build réussi : les mises à jour du backend se sont bien passées !"
       - name: Message d’erreur
         if: failure()
         run: |
@@ -47,35 +39,56 @@ jobs:
     runs-on: ubuntu-latest
     needs: mise_a_jour_backend
     if: github.event_name != 'schedule'
+    services:
+      db:
+        image: postgres:15
+        env:
+          POSTGRES_DB: logmeindb
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: logmeindb
+      DB_USER: postgres
+      DB_PASSWORD: postgres
     steps:
       - uses: actions/checkout@v3
-
-      - name: Installer les dépendances Python
+      - name: Installer Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Installer dépendances Python
         run: |
+          pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest
-
+      - name: Initialiser la base de données
+        run: python backend/init_db_ci.py
       - name: Lancer Pytest
-        run: PYTHONPATH=backend pytest backend/tests
-
+        run: pytest backend/tests
       - name: Analyse Bandit (Python)
         uses: tj-actions/bandit@v5
         continue-on-error: true
         with:
           targets: "./backend"
-
       - name: Linter Flake8
         uses: py-actions/flake8@v2
         continue-on-error: true
         with:
           path: "./backend"
-
       - name: Installer Trivy
         run: |
           sudo apt-get update && sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.50.2/trivy_0.50.2_Linux-64bit.deb
           sudo dpkg -i trivy_0.50.2_Linux-64bit.deb
-
       - name: Scan Trivy du code (SCA + vuln + secrets)
         run: |
           trivy fs --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format table --scanners vuln,secret,config .
@@ -91,68 +104,52 @@ jobs:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v3
-
       - uses: docker/setup-buildx-action@v3
-
       - uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
-
       - name: Construire l’image backend
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-backend:latest ./backend
-
       - name: Construire l’image frontend
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-frontend:latest ./frontend
-
       - name: Construire l’image nginx
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-nginx:latest -f nginx/Dockerfile .
-
       - name: Installer Trivy
         run: |
           sudo apt-get update && sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.50.2/trivy_0.50.2_Linux-64bit.deb
           sudo dpkg -i trivy_0.50.2_Linux-64bit.deb
-
       - name: Scanner l’image backend avec Trivy
         run: |
           trivy image --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format sarif -o trivy-backend.sarif $DOCKERHUB_USERNAME/littlepigs-backend:latest
         continue-on-error: true
-
       - name: Scanner l’image frontend avec Trivy
         run: |
           trivy image --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format sarif -o trivy-frontend.sarif $DOCKERHUB_USERNAME/littlepigs-frontend:latest
         continue-on-error: true
-
       - name: Scanner l’image nginx avec Trivy
         run: |
           trivy image --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format sarif -o trivy-nginx.sarif $DOCKERHUB_USERNAME/littlepigs-nginx:latest
         continue-on-error: true
-
       - name: Pousser l’image backend
         run: docker push $DOCKERHUB_USERNAME/littlepigs-backend:latest
-
       - name: Pousser l’image frontend
         run: docker push $DOCKERHUB_USERNAME/littlepigs-frontend:latest
-
       - name: Pousser l’image nginx
         run: docker push $DOCKERHUB_USERNAME/littlepigs-nginx:latest
-
       - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-backend.sarif"
           category: "trivy-backend"
-
       - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-frontend.sarif"
           category: "trivy-frontend"
-
       - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-nginx.sarif"
           category: "trivy-nginx"
-
       - name: Générer le résumé CI
         if: always()
         run: |
@@ -176,13 +173,11 @@ jobs:
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
-
       - name: Copier scripts et configs sur admin
         run: |
           scp -o StrictHostKeyChecking=no cluster_config.yml $ADMIN_USER@$ADMIN_IP:~/
           scp -o StrictHostKeyChecking=no docker-compose.yml $ADMIN_USER@$ADMIN_IP:~/
           scp -o StrictHostKeyChecking=no scripts/deploy_cluster.sh $ADMIN_USER@$ADMIN_IP:~/
-
       - name: Installer yq sur admin
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "\
@@ -192,7 +187,6 @@ jobs:
               sudo mv yq /usr/local/bin/yq; \
             fi \
           "
-
       - name: Lancer le script de déploiement
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "chmod +x ~/deploy_cluster.sh && ~/deploy_cluster.sh"
@@ -207,20 +201,16 @@ jobs:
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v3
-
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
-
       - name: Copier healthcheck.sh et cluster_config.yml sur admin
         run: |
           scp -o StrictHostKeyChecking=no scripts/healthcheck.sh $ADMIN_USER@$ADMIN_IP:~/
           scp -o StrictHostKeyChecking=no cluster_config.yml $ADMIN_USER@$ADMIN_IP:~/
-
       - name: Exécuter healthcheck (logs + vérifications)
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "chmod +x ~/healthcheck.sh && ~/healthcheck.sh"
-
       - name: Récupérer et afficher le log du healthcheck
         run: |
           scp -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP:~/cluster_health.log ./cluster_health.log
