--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -62,17 +62,24 @@ jobs:
       DB_PASSWORD: postgres
     steps:
       - uses: actions/checkout@v3
+
       - name: Installer Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Installer dépendances Python
         run: |
           pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest
+
+      - name: Donner les droits d'exécution au script wait-for-it
+        run: chmod +x backend/wait-for-it.sh
+
       - name: Attendre que Postgres soit prêt
         run: bash backend/wait-for-it.sh db:5432 --timeout=60 --strict -- echo "Postgres is up"
+
       - name: Initialiser la base de données
         run: |
           export DB_HOST=db
@@ -81,25 +88,30 @@ jobs:
           export DB_USER=postgres
           export DB_PASSWORD=postgres
           python backend/init_db_ci.py
+
       - name: Lancer Pytest
         run: |
           export PYTHONPATH=backend
           pytest backend/tests
+
       - name: Analyse Bandit (Python)
         uses: tj-actions/bandit@v5
         continue-on-error: true
         with:
           targets: "./backend"
+
       - name: Linter Flake8
         uses: py-actions/flake8@v2
         continue-on-error: true
         with:
           path: "./backend"
+
       - name: Installer Trivy
         run: |
           sudo apt-get update && sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.50.2/trivy_0.50.2_Linux-64bit.deb
           sudo dpkg -i trivy_0.50.2_Linux-64bit.deb
+
       - name: Scan Trivy du code (SCA + vuln + secrets)
         run: trivy fs --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format table --scanners vuln,secret,config .
         continue-on-error: true
