--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,8 +45,7 @@ jobs:
           POSTGRES_DB: logmeindb
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
+        # ports supprimés car inutiles et souvent bloquants en CI
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
