feat: Ajout du support multi-tests Pytest + MAJ auto programmées

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: '0 2 * * 1'
+    - cron: '0 2 * * 1' # chaque lundi à 2h
   workflow_dispatch:
 
 permissions:
@@ -23,8 +23,7 @@ jobs:
       - run: docker build -t local-backend:latest ./backend
       - name: Message de succès
         if: success()
-        run: |
-          echo "✅ Build réussi : les mises à jour du backend se sont bien passées !"
+        run: echo "✅ Build réussi : les mises à jour du backend se sont bien passées !"
       - name: Message d’erreur
         if: failure()
         run: |
@@ -67,11 +66,8 @@ jobs:
           pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest psycopg2-binary
-      - name: Vérifier la résolution DNS de db
-        run: |
-          nslookup db || dig db || ping -c 3 db || exit 1
-      - name: Initialiser la base de données (avec attente DB ready)
-        run: python backend/init_db_ci.py
+      - name: Attendre que la DB soit UP (via wait-for-it.sh)
+        run: bash backend/wait-for-it.sh db:5432 --timeout=60 --strict -- echo "Postgres is up"
       - name: Lancer Pytest
         run: |
           export PYTHONPATH=backend
