--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: '0 2 * * 1' # chaque lundi à 2h
+    - cron: '0 2 * * 1'
   workflow_dispatch:
 
 permissions:
@@ -58,36 +58,50 @@ jobs:
       DB_PASSWORD: postgres
     steps:
       - uses: actions/checkout@v3
+
       - name: Installer Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Installer dépendances Python
         run: |
           pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest psycopg2-binary
-      - name: Attendre que la DB soit UP (via wait-for-it.sh)
+
+      - name: Donner les droits d'exécution au script wait-for-it
+        run: chmod +x backend/wait-for-it.sh
+
+      - name: Attendre que la DB soit UP (wait-for-it)
         run: bash backend/wait-for-it.sh db:5432 --timeout=60 --strict -- echo "Postgres is up"
+
+      - name: Initialiser la base de données (init_db)
+        run: python backend/init_db_ci.py
+
       - name: Lancer Pytest
         run: |
           export PYTHONPATH=backend
           pytest backend/tests
+
       - name: Analyse Bandit (Python)
         uses: tj-actions/bandit@v5
         continue-on-error: true
         with:
           targets: "./backend"
+
       - name: Linter Flake8
         uses: py-actions/flake8@v2
         continue-on-error: true
         with:
           path: "./backend"
+
       - name: Installer Trivy
         run: |
           sudo apt-get update && sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.50.2/trivy_0.50.2_Linux-64bit.deb
           sudo dpkg -i trivy_0.50.2_Linux-64bit.deb
+
       - name: Scan Trivy du code (SCA + vuln + secrets)
         run: trivy fs --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format table --scanners vuln,secret,config .
         continue-on-error: true
