--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: '0 2 * * 1'  # Lundi 2h du matin
+    - cron: '0 2 * * 1'
   workflow_dispatch:
 
 permissions:
@@ -46,10 +46,10 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         options: >-
-          --health-cmd pg_isready
+          --health-cmd pg_isready -U postgres
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 15
+          --health-retries 20
     env:
       DB_HOST: db
       DB_PORT: 5432
@@ -67,8 +67,30 @@ jobs:
           pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest psycopg2-binary
-      - name: Attendre que la DB soit UP
-        run: bash backend/wait-for-it.sh db:5432 --timeout=120 --strict -- echo "Postgres is up"
+      - name: Initialiser la base de données (table logs si besoin)
+        run: |
+          python -c "
+import psycopg2, os
+conn = psycopg2.connect(
+    host=os.environ['DB_HOST'],
+    port=os.environ['DB_PORT'],
+    dbname=os.environ['DB_NAME'],
+    user=os.environ['DB_USER'],
+    password=os.environ['DB_PASSWORD']
+)
+cur = conn.cursor()
+cur.execute('''
+CREATE TABLE IF NOT EXISTS logs (
+    id SERIAL PRIMARY KEY,
+    message TEXT NOT NULL,
+    level TEXT NOT NULL,
+    ip VARCHAR(45),
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+)''')
+conn.commit()
+cur.close()
+conn.close()
+"
       - name: Lancer Pytest
         run: |
           export PYTHONPATH=backend
