--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,8 @@
 FROM nginx:alpine
 
-# On part de la racine du repo pour le build context, donc le chemin est relatif à la racine
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY frontend /usr/share/nginx/html
+
+USER appuser
